--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "rxjs": "~6.3.3",
+    "tsd": "^0.6.5",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone": "^0.3.4",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.11.0",
